2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Fix bug in `spr'.

	* slc/tools/lib/slc/lower/lowercreate.py (AutoResolve): Insert
	missing semicolon in generated code.

2010-06-13  Raphael 'kena' Poss  <kena@coda.science.uva.nl>

	Fix bugs in `hrt' compilation.

	* tools/bin/cce.in: Use pthreads for `slc_aslink' when
	necessary. Fix initialization of `slc_debug_flags'.

	* tools/lib/hrt.mk: Use `$(SLC_HRT_N)'.

	* tools/lib/slc/am/visitors.py: Use 0 instead of `NULL'.

2010-06-13  Raphael 'kena' Poss  <kena@coda.science.uva.nl>

	Try to provide some FreeBSD compatibility for `hrt'.

	* tools/lib/host-host-hrt/tc.c (alloc_stack): Try to use
	`MAP_STACK' if `MAP_GROWSDOWN' is not defined (FreeBSD).

2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Merge the following changes.

	2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Bump required tool versions.

	* configure.ac: Require Autoconf 2.65 and Python 2.6.

	2010-06-13  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Better support for C99.

	* configure.ac: Require a C99 compiler.

	* tools/bin/cce.in: Do not add `-std=gnu99', since `configure' now
	does the right thing.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend build process for `hrt' targets.

	* build-aux/slc.m4: New conditional ENABLE_SLC_HRT.

	* build-aux/ax_pthread.m4: Import from the Autoconf archive.
	* configure.ac: Use it.

	* tools/bin/Makefile.am,
	* tools/bin/cce.in: Propagate compiler/flags for pthreads to use
	with `hrt' targets.

	* tools/lib/host-host-hrt/include/sl_hrt.h,
	* tools/lib/host-host-hrt/tc.c: New (placeholders).

	* tools/lib/host-host-hrt/slrt.c,
	* tools/lib/hrt.mk: New.

	* tools/lib/Makefile.am: Use `hrt.mk' too.

	* tools/lib/t-spr/include/sl_support.h: Include `sl_hrt.h' when
	appropriate.

	* tools/lib/slc/am/visitors.py: Remove `visit_programs', since the
	runtime header is now included automatically.

2010-06-11  Raphael 'kena' Poss  <r.c.poss@uva.nl>
